Mobile layout issues

--- a/prototype/_sass/components/_steps.scss
+++ b/prototype/_sass/components/_steps.scss
@@ -1,8 +1,11 @@
 #steps {
 
-	li {
+	> li {
 		display: block;
-
+		
+		&.active {
+			background: rgba(0,0,0,0.2);
+		}
 
 		a {
 			padding: 0.3em 6%;
@@ -10,7 +13,7 @@
 		}
 	}
 
-	.questions {
+	.topics {
 		position: absolute;
 		left: 100%;
 		width: 100%;
@@ -24,7 +27,7 @@
 		-webkit-box-sizing: border-box;
 		box-sizing: border-box;
 
-		padding: 6%;
+		padding: 10% 6%;
 
 		a {
 			color: black;
